@@ -1,0 +1,12 @@
+#include "CrewView.h"
+
+namespace TrekStar
+{
+    namespace People
+    {
+        CrewView::CrewView(CrewInterface & model) : BaseView()
+        {
+            this->model = &model;
+        }
+    }
+}
